# Face.Recognition

./: .gitignore  README.md  image_handler.py  main.py  monitor.py  pyproject.toml
