[project]
name = "face-recognition-background-service"
version = "0.1.0"
description = "This is a background service that detects faces in images and sends the results to a directory."
requires-python = ">=3.13"
dependencies = [
    "dlib>=19.22.0",
    "face-recognition>=1.3.0",
    "face-recognition-models>=0.3.0",
    "numpy>=1.21.0",
    "pillow>=10.4.0",
    "setuptools>=75.8.0",
    "watchdog>=4.0.2",
]
